<resources>
    <string name="app_name">Contas a Pagar</string>
    <string name="adicionar_conta">Adicionar conta</string>
    <string name="total">Total a pagar:</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="descricao">Descrição</string>
    <string name="vencimento">Vencimento</string>
    <string name="valor">Valor</string>
    <string name="adicionar">Adicionar</string>
    <string name="cancelar">Cancelar</string>
    <string name="salvar">Salvar</string>
    <string name="lista_de_contas">Lista de Contas</string>
    <string name="paga">Paga</string>
    <string name="total_pago">Pago este mês</string>
    <string name="total_pendente">A Pagar</string>
    <string name="filtrar">Filtrar</string>
    <string name="pesquisar">Pesquisar conta</string>
    <string name="todas">Todas</string>
    <string name="pendentes">Pendentes</string>
    <string name="pagas">Pagas</string>
    <string name="filtrar_contas">Filtrar Contas</string>
    <string name="fechar">Fechar</string>
    <string name="limpar_filtros">Limpar Filtros</string>
</resources>